@@ -1,3 +1,8 @@
+2009-08-01  Mark Ellis  <mark@mpellis.org.uk>
+
+	* put client connection socket in $libexecdir/run instead
+	  of /tmp
+
 2009-07-16  Mark Ellis  <mark@mpellis.org.uk>
 
 	* 0.14 release
